# tiny-agent-harness

./: .gitignore  AGENTS.md  README.md  config.yaml  main.py  plan.md  pyproject.toml  refactor_plan.md  test.py
.claude/: settings.local.json
src/: cli.py
src/tiny_agent_harness/: __init__.py  cli.py  default_config.yaml  harness.py  runtime.py  utils.py
src/tiny_agent_harness/agents/: __init__.py  base_agent.py  protocols.py  shared.py  tool_calling_agent.py
src/tiny_agent_harness/channels/: __init__.py  base.py  dispatcher.py  driver.py  input.py  local.py  output.py  output_event_dispatcher.py  queue.py  request_processor.py
src/tiny_agent_harness/handlers/: listener.py
src/tiny_agent_harness/llm/: __init__.py  client.py  factory.py
src/tiny_agent_harness/output_handlers/: __init__.py  base.py  collecting.py  console.py
src/tiny_agent_harness/providers/: __init__.py  base_provider.py  openai_provider.py  openrouter_provider.py
src/tiny_agent_harness/schemas/: __init__.py  agents.py  channels.py  config.py  harness.py  (+4 more)
tests/: conftest.py  test_agent_exports.py  test_agents_protocols.py  test_channels.py  test_cli.py  test_config.py  test_explore_agent.py  test_harness.py  test_listener_channel.py  test_llm_client.py  test_llm_factory.py  test_llm_providers.py  test_package_exports.py  test_planner_agent.py  test_providers.py  test_reviewer_agent.py  test_runtime.py  test_schemas_exports.py  test_supervisor_agent.py  test_tool_calling_agent.py  test_tool_executor.py  test_tools.py  test_tools_runtime.py  test_verifier_agent.py  test_worker_agent.py
(+86 files in other folders)
